fixed img width issue on small screens

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2660,6 +2660,7 @@ footer a
 
   img
     position: absolute
+    width: 100%
     z-index: -1
 
 .ciferka::after
